fix(history,react-dsfr): two version of SegmentedControl (contrast and regular)

--- a/common/assets/styles/SegmentedControl.scss
+++ b/common/assets/styles/SegmentedControl.scss
@@ -1,12 +1,12 @@
-.fr-segmented__element label {
+.segmented-control-contrast .fr-segmented__element label {
     color: white;
 }
 
-.fr-segmented__elements {
+.segmented-control-contrast .fr-segmented__elements {
     box-shadow: inset 0 0 0 1px #DAE9FF66;
 }
 
-.fr-segmented__element input:checked + label {
+.segmented-control-contrast .fr-segmented__element input:checked + label {
     color: white;
     box-shadow: inset 0 0 0 1px white;
 }
